--- a/测试.md
+++ b/测试.md
@@ -1,37 +1,71 @@
-| **Thai**                                         | **English Translation**                                      |
-|--------------------------------------------------|--------------------------------------------------------------|
-| เขามีแฟนหลายคน                                  | He has many partners.                                        |
-| หลายคนอยากรู้ว่าเขามีแฟนหรือยัง                   | Many people want to know if he has a partner yet.            |
-| หลายสิบ                                         | Many tens (dozens)                                           |
-| หลายร้อย                                        | Many hundreds                                                |
-| หลายพัน                                         | Many thousands                                               |
-| อย่าง                                            | Like / In a manner                                           |
-| หลายอย่าง                                       | Various things                                               |
-| ช่วย                                            | Help                                                         |
-| ช่วยซื้อส้มตำให้หนูด้วย                         | Please help buy som tam for me.                              |
-| ช่วยทำการบ้านให้น้อง                           | Help do homework for (your) younger sibling.                 |
-| ช่วยทำงานบ้านให้แม่                             | Help do housework for mom.                                   |
-| ช่วยใครทำอะไร                                  | Help someone do something.                                   |
-| ช่วยแม่ทำงานบ้าน                              | Help mom do housework.                                       |
-| ถูก                                             | Correct / Right                                              |
-| ผิด                                             | Wrong / Incorrect                                            |
-| ถูกปากทุกอย่าง                                  | Everything is to my taste.                                   |
-| ถูกใจ                                           | Pleasing                                                     |
-| ปากการ้านี้ถูกใจผมทุกต้าม                         | This dish pleases my palate every time.                      |
-| ถูกคอกัน                                       | They are mutually compatible.                                |
-| ต้องเขียนให้ถูกทุกคำ                            | Must write every word correctly.                             |
-| ทุก                                             | Every / All                                                  |
-| ทุกวัน                                         | Every day                                                    |
-| ทุกคน                                          | Everyone                                                     |
-| ทุกเล่ม                                         | Every volume (every book)                                    |
-| สวัสดีทุกคน                                    | Hello everyone.                                              |
-| แม่ให้เงินผมทุก 3 เดือน                         | My mother gives me money every 3 months.                     |
-| นักศึกษาชอบดูหนังเรื่องนี้ทุกคน                 | Every student likes watching this movie.                     |
-| อาหารถูกปากทุกอย่าง                             | Every food is to my taste.                                   |
-| อาหารทุกอย่างถูกปาก                             | All food is delicious.                                       |
-| อาจารย์กรุณาอธิบายอีกครั้งได้ไหมครับ             | Teacher, could you please explain it again?                  |
-| กรุณาเปิดประตูให้ผมด้วย                         | Please open the door for me as well.                         |
-| กรุณาตอบกลับอีเมล์นี้ด้วย                        | Please reply to this email as well.                          |
-| กรุณาถอดรองเท้า                                | Please take off your shoes.                                  |
-| กรุณาอย่าส่งเสียงดัง                            | Please do not make loud noises.                              |
-| อาหารขายหมดทุกอย่าง                             | All the food is sold out.                                    |
+| **Thai**  | **English Translation**           |
+|-----------|-----------------------------------|
+| ตา        | Eye                               |
+| ปี        | Year                              |
+| ดู        | Look / See                        |
+| อา        | Uncle                             |
+| ตี        | Strike / Hit                      |
+| ดี        | Good                              |
+| ปู        | Crab                              |
+| กะปิ      | Shrimp paste                      |
+| คะปู      | Crab paste                        |
+| กา        | Crow                              |
+| ปา        | Throw                             |
+| จะ        | Will                              |
+| กะ        | And / With                        |
+| ดุ        | Scold / Angry                     |
+| จำ        | Remember                          |
+| ไป        | Go                                |
+| เตะ       | Kick                              |
+| ดำ        | Black                             |
+| ตำ        | Pound / Crush                     |
+| ดีใจ      | Happy                             |
+| ไอ        | Hey (interjection)                |
+| เอา       | Take / Get                        |
+| แกะ       | Sheep                             |
+| ใจ        | Heart / Mind                      |
+| เบา       | Light / Soft                      |
+| เกาะ      | Cling / Island                    |
+| เตา       | Stove                             |
+| เดา       | Guess                             |
+| โต๊ะ      | Table                             |
+| ป้า       | Aunt                              |
+| ไก่       | Chicken                           |
+| โกโก้     | Cocoa                             |
+| กี่       | How many                          |
+| แก่       | Old                               |
+| เป่า      | Blow                              |
+| เก้าอี้   | Chair                             |
+| ได้       | Can / Get                         |
+| เก้า      | Nine                              |
+| ปู่       | Grandfather                       |
+| เก่า      | Old                               |
+| ป่า       | Forest                            |
+| ปี่       | Fife (small flute)                |
+| ไข่ไก่    | Chicken egg                       |
+| สี       | Color                             |
+| สี่       | Four                              |
+| หอ       | Hall / Dormitory                  |
+| เขา      | He                                |
+| ขา       | Leg                               |
+| ให้       | Give                              |
+| เข่าใจ    | Understand (likely “เข้าใจ”)         |
+| ถ้า       | If                                |
+| ถู       | Rub                               |
+| ห้า       | Five                              |
+| หา       | Find / Search                     |
+| ไฟ่      | Fire                              |
+| เข้า      | Enter                             |
+| ผ้า       | Cloth                             |
+| หู       | Ear                               |
+| ใส่      | Wear / Put on                     |
+| ขอ       | Request                           |
+| ขู่      | Threaten                          |
+| ฝา       | Lid / Cover                       |
+| คือ      | Is / Are                          |
+| ไฟฟ้า    | Electricity                       |
+| ใปชา     | (Literal: "go tea")               |
+| พ่อ      | Father                            |
+| เธอ      | She                               |
+| ภาษา     | Language                          |
+| ฟ้า      | Sky / Blue                        |
