--- a/测试.md
+++ b/测试.md
@@ -1,71 +1,62 @@
-| **Thai**  | **English Translation**           |
-|-----------|-----------------------------------|
-| ตา        | Eye                               |
-| ปี        | Year                              |
-| ดู        | Look / See                        |
-| อา        | Uncle                             |
-| ตี        | Strike / Hit                      |
-| ดี        | Good                              |
-| ปู        | Crab                              |
-| กะปิ      | Shrimp paste                      |
-| คะปู      | Crab paste                        |
-| กา        | Crow                              |
-| ปา        | Throw                             |
-| จะ        | Will                              |
-| กะ        | And / With                        |
-| ดุ        | Scold / Angry                     |
-| จำ        | Remember                          |
-| ไป        | Go                                |
-| เตะ       | Kick                              |
-| ดำ        | Black                             |
-| ตำ        | Pound / Crush                     |
-| ดีใจ      | Happy                             |
-| ไอ        | Hey (interjection)                |
-| เอา       | Take / Get                        |
-| แกะ       | Sheep                             |
-| ใจ        | Heart / Mind                      |
-| เบา       | Light / Soft                      |
-| เกาะ      | Cling / Island                    |
-| เตา       | Stove                             |
-| เดา       | Guess                             |
-| โต๊ะ      | Table                             |
-| ป้า       | Aunt                              |
-| ไก่       | Chicken                           |
-| โกโก้     | Cocoa                             |
-| กี่       | How many                          |
-| แก่       | Old                               |
-| เป่า      | Blow                              |
-| เก้าอี้   | Chair                             |
-| ได้       | Can / Get                         |
-| เก้า      | Nine                              |
-| ปู่       | Grandfather                       |
-| เก่า      | Old                               |
-| ป่า       | Forest                            |
-| ปี่       | Fife (small flute)                |
-| ไข่ไก่    | Chicken egg                       |
-| สี       | Color                             |
-| สี่       | Four                              |
-| หอ       | Hall / Dormitory                  |
-| เขา      | He                                |
-| ขา       | Leg                               |
-| ให้       | Give                              |
-| เข่าใจ    | Understand (likely “เข้าใจ”)         |
-| ถ้า       | If                                |
-| ถู       | Rub                               |
-| ห้า       | Five                              |
-| หา       | Find / Search                     |
-| ไฟ่      | Fire                              |
-| เข้า      | Enter                             |
-| ผ้า       | Cloth                             |
-| หู       | Ear                               |
-| ใส่      | Wear / Put on                     |
-| ขอ       | Request                           |
-| ขู่      | Threaten                          |
-| ฝา       | Lid / Cover                       |
-| คือ      | Is / Are                          |
-| ไฟฟ้า    | Electricity                       |
-| ใปชา     | (Literal: "go tea")               |
-| พ่อ      | Father                            |
-| เธอ      | She                               |
-| ภาษา     | Language                          |
-| ฟ้า      | Sky / Blue                        |
+| **Thai**   | **English Translation**                                        |
+|------------|----------------------------------------------------------------|
+| ทำ         | Do / Make                                                      |
+| แพะ        | Goat                                                           |
+| ชื่อ       | Name                                                           |
+| ซื้อ       | Buy                                                            |
+| พี่        | Older sibling / Elder                                          |
+| คะ         | (Female polite particle: "ka")                                 |
+| ค่ะ        | (Female polite particle: "ka")                                 |
+| ใช้        | Use                                                            |
+| ภาษาไทย   | Thai language                                                  |
+| คู่        | Pair / Couple                                                  |
+| ใช่       | Yes / Correct                                                  |
+| คำ        | Word                                                           |
+| นาฬิกา    | Clock / Watch                                                  |
+| เรา        | We / Us                                                        |
+| นี้        | This                                                           |
+| อะไร      | What                                                           |
+| มา        | Come                                                           |
+| มี        | Have / There is                                                |
+| น้ำ       | Water                                                          |
+| ไม่ใช่    | Not / Is not                                                   |
+| ใบไม้     | Leaf                                                           |
+| ทำไม      | Why                                                            |
+| ทีวี      | TV                                                             |
+| และ       | And                                                            |
+| แม่       | Mother                                                         |
+| น้า       | (Maternal) relative (uncle/aunt)                               |
+| นี้        | This                                                           |
+| มือ       | Hand                                                           |
+| ไม่        | Not                                                            |
+| รู้       | Know                                                           |
+| นำชา     | Bring tea                                                      |
+| ธุระ      | Errand / Business                                              |
+| ใน        | In                                                             |
+| ช้า       | Slow / Late                                                    |
+| ม้า       | Horse                                                          |
+| งา       | Sesame                                                         |
+| ตั๋ว      | Ticket                                                         |
+| ย่า       | Paternal grandmother                                             |
+| วัว       | Cow                                                            |
+| เสื้อผ้า  | Clothes                                                        |
+| เชื่อ     | Believe                                                        |
+| ว่า       | That                                                           |
+| มะละกอ   | Papaya                                                         |
+| เสือ      | Tiger                                                          |
+| มัว       | Blurry / Dull                                                  |
+| เนื้อ     | Meat / Flesh                                                   |
+| เพื่อ      | For / In order to                                              |
+| เรือ      | Boat                                                           |
+| หัว       | Head                                                           |
+| ตัว       | Body / Unit (classifier)                                       |
+| ที่นี่     | Here                                                           |
+| ชั่ว      | Bad / Evil                                                     |
+| มะเขือ    | Eggplant                                                       |
+| เลีอ      | Turn (ambiguous; likely intended as "เลี้ยว")                  |
+| ผัว       | Husband                                                        |
+| เมีย      | Wife                                                           |
+| ผัวเมีย   | Husband and wife (married couple)                              |
+| หัวเราะ   | Laugh                                                          |
+| เมื่อ       | When                                                           |
+| เมื่อเช้า  | In the morning                                                 |
