--- a/测试.md
+++ b/测试.md
@@ -1,62 +1,89 @@
-| **Thai**   | **English Translation**                                        |
-|------------|----------------------------------------------------------------|
-| ทำ         | Do / Make                                                      |
-| แพะ        | Goat                                                           |
-| ชื่อ       | Name                                                           |
-| ซื้อ       | Buy                                                            |
-| พี่        | Older sibling / Elder                                          |
-| คะ         | (Female polite particle: "ka")                                 |
-| ค่ะ        | (Female polite particle: "ka")                                 |
-| ใช้        | Use                                                            |
-| ภาษาไทย   | Thai language                                                  |
-| คู่        | Pair / Couple                                                  |
-| ใช่       | Yes / Correct                                                  |
-| คำ        | Word                                                           |
-| นาฬิกา    | Clock / Watch                                                  |
-| เรา        | We / Us                                                        |
-| นี้        | This                                                           |
-| อะไร      | What                                                           |
-| มา        | Come                                                           |
-| มี        | Have / There is                                                |
-| น้ำ       | Water                                                          |
-| ไม่ใช่    | Not / Is not                                                   |
-| ใบไม้     | Leaf                                                           |
-| ทำไม      | Why                                                            |
-| ทีวี      | TV                                                             |
-| และ       | And                                                            |
-| แม่       | Mother                                                         |
-| น้า       | (Maternal) relative (uncle/aunt)                               |
-| นี้        | This                                                           |
-| มือ       | Hand                                                           |
-| ไม่        | Not                                                            |
-| รู้       | Know                                                           |
-| นำชา     | Bring tea                                                      |
-| ธุระ      | Errand / Business                                              |
-| ใน        | In                                                             |
-| ช้า       | Slow / Late                                                    |
-| ม้า       | Horse                                                          |
-| งา       | Sesame                                                         |
-| ตั๋ว      | Ticket                                                         |
-| ย่า       | Paternal grandmother                                             |
-| วัว       | Cow                                                            |
-| เสื้อผ้า  | Clothes                                                        |
-| เชื่อ     | Believe                                                        |
-| ว่า       | That                                                           |
-| มะละกอ   | Papaya                                                         |
-| เสือ      | Tiger                                                          |
-| มัว       | Blurry / Dull                                                  |
-| เนื้อ     | Meat / Flesh                                                   |
-| เพื่อ      | For / In order to                                              |
-| เรือ      | Boat                                                           |
-| หัว       | Head                                                           |
-| ตัว       | Body / Unit (classifier)                                       |
-| ที่นี่     | Here                                                           |
-| ชั่ว      | Bad / Evil                                                     |
-| มะเขือ    | Eggplant                                                       |
-| เลีอ      | Turn (ambiguous; likely intended as "เลี้ยว")                  |
-| ผัว       | Husband                                                        |
-| เมีย      | Wife                                                           |
-| ผัวเมีย   | Husband and wife (married couple)                              |
-| หัวเราะ   | Laugh                                                          |
-| เมื่อ       | When                                                           |
-| เมื่อเช้า  | In the morning                                                 |
+| **Thai**  | **English** |
+|-----------|-------------|
+| ตา        | Eye         |
+| อา        | Uncle       |
+| ปู        | Crab        |
+| กะปิ      | Shrimp paste|
+| ตะปู      | Nail        |
+| ปา        | Throw       |
+| ดุ        | Scold       |
+| เตะ       | Kick        |
+| ตำ        | Pound       |
+| ไอ        | Cough       |
+| แกะ       | Sheep       |
+| เบา       | Light       |
+| เกาะ      | Island      |
+| เตา       | Stove/Oven  |
+| เดา       | Guess       |
+| โต๊ะ      | Table       |
+| โกโก้     | Cocoa       |
+| แก่       | Old         |
+| เป่า      | Blow        |
+| เก้าอี้   | Chair       |
+| ปู่       | Grandfather |
+| เก่า      | Old         |
+| ป่า       | Forest      |
+| ปี่       | Flute       |
+| ไข่ไก่    | Egg         |
+| หอ        | Building    |
+| ขา        | Leg         |
+| ถู        | Rub         |
+| ไฟ่       | Fire        |
+| หู        | Ear         |
+| ขู่       | Threaten    |
+| ฝา        | Cover       |
+| ไฟฟ้า     | Electricity |
+| ใบชา      | Tea leaves  |
+| ฟ้า       | Sky/Blue    |
+| แพะ       | Goat        |
+| ใช้       | Use         |
+| คู่        | Pair/Spouse |
+| นาฬิกา    | Clock/Watch |
+| ทีวี      | TV          |
+| น้า       | Aunt/Uncle (maternal) |
+| ช้า       | Slow        |
+| ม้า       | Horse       |
+| งา        | Sesame      |
+| ตั๋ว      | Ticket      |
+| ย่า       | Grandmother |
+| วัว       | Cow         |
+| มะละกอ    | Papaya      |
+| มัว       | Blurry/Confused |
+| เพื่อ      | For/Purpose |
+| เรือ       | Boat        |
+| ชั่ว      | Bad/Evil    |
+| มะเขือ    | Eggplant    |
+| เลี้ยว     | Turn        |
+| ผัว       | Husband     |
+| เมีย      | Wife        |
+| ผัวเมีย   | Husband and wife |
+| เมื่อ      | When        |
+| สาลี่      | Snow pear   |
+| เบื่อ      | Bored       |
+| ซาลาเปา   | Steamed bun |
+| เชื่อใจ    | Trust       |
+| นาฬิกาข้อมือ | Wristwatch  |
+| สีเทา     | Gray        |
+| ลำไย      | Longan      |
+| เงาะ       | Rambutan    |
+| บัว       | Lotus       |
+| มิน่าเล่า  | No wonder   |
+| เมื่อตะกี้  | Just now    |
+| แผนที่     | Map         |
+| เดิน       | Walk        |
+| เซี่ยงไฮ้   | Shanghai    |
+| นามสกุล   | Surname     |
+| ฮกเกี้ยน   | Hokkien     |
+| ซัก        | Wash        |
+| ได้ยิน     | Hear        |
+| เรื่อย ๆ   | Continuously |
+| แหละ       | Marker word |
+| จึง        | Therefore   |
+| เรียกว่า   | Called      |
+| ทบทวน     | Review      |
+| มะเขือเทศ  | Tomato      |
+| มันฝรั่ง   | Potato      |
+| งั้นๆ      | So-so       |
+| เสีย       | Lose/Cost   |
+| พยายาม    | Try/Strive  |
+| ดินสอ     | Pencil      |
