--- a/测试.md
+++ b/测试.md
@@ -1,89 +1,12 @@
-| **Thai**  | **English** |
-|-----------|-------------|
-| ตา        | Eye         |
-| อา        | Uncle       |
-| ปู        | Crab        |
-| กะปิ      | Shrimp paste|
-| ตะปู      | Nail        |
-| ปา        | Throw       |
-| ดุ        | Scold       |
-| เตะ       | Kick        |
-| ตำ        | Pound       |
-| ไอ        | Cough       |
-| แกะ       | Sheep       |
-| เบา       | Light       |
-| เกาะ      | Island      |
-| เตา       | Stove/Oven  |
-| เดา       | Guess       |
-| โต๊ะ      | Table       |
-| โกโก้     | Cocoa       |
-| แก่       | Old         |
-| เป่า      | Blow        |
-| เก้าอี้   | Chair       |
-| ปู่       | Grandfather |
-| เก่า      | Old         |
-| ป่า       | Forest      |
-| ปี่       | Flute       |
-| ไข่ไก่    | Egg         |
-| หอ        | Building    |
-| ขา        | Leg         |
-| ถู        | Rub         |
-| ไฟ่       | Fire        |
-| หู        | Ear         |
-| ขู่       | Threaten    |
-| ฝา        | Cover       |
-| ไฟฟ้า     | Electricity |
-| ใบชา      | Tea leaves  |
-| ฟ้า       | Sky/Blue    |
-| แพะ       | Goat        |
-| ใช้       | Use         |
-| คู่        | Pair/Spouse |
-| นาฬิกา    | Clock/Watch |
-| ทีวี      | TV          |
-| น้า       | Aunt/Uncle (maternal) |
-| ช้า       | Slow        |
-| ม้า       | Horse       |
-| งา        | Sesame      |
-| ตั๋ว      | Ticket      |
-| ย่า       | Grandmother |
-| วัว       | Cow         |
-| มะละกอ    | Papaya      |
-| มัว       | Blurry/Confused |
-| เพื่อ      | For/Purpose |
-| เรือ       | Boat        |
-| ชั่ว      | Bad/Evil    |
-| มะเขือ    | Eggplant    |
-| เลี้ยว     | Turn        |
-| ผัว       | Husband     |
-| เมีย      | Wife        |
-| ผัวเมีย   | Husband and wife |
-| เมื่อ      | When        |
-| สาลี่      | Snow pear   |
-| เบื่อ      | Bored       |
-| ซาลาเปา   | Steamed bun |
-| เชื่อใจ    | Trust       |
-| นาฬิกาข้อมือ | Wristwatch  |
-| สีเทา     | Gray        |
-| ลำไย      | Longan      |
-| เงาะ       | Rambutan    |
-| บัว       | Lotus       |
-| มิน่าเล่า  | No wonder   |
-| เมื่อตะกี้  | Just now    |
-| แผนที่     | Map         |
-| เดิน       | Walk        |
-| เซี่ยงไฮ้   | Shanghai    |
-| นามสกุล   | Surname     |
-| ฮกเกี้ยน   | Hokkien     |
-| ซัก        | Wash        |
-| ได้ยิน     | Hear        |
-| เรื่อย ๆ   | Continuously |
-| แหละ       | Marker word |
-| จึง        | Therefore   |
-| เรียกว่า   | Called      |
-| ทบทวน     | Review      |
-| มะเขือเทศ  | Tomato      |
-| มันฝรั่ง   | Potato      |
-| งั้นๆ      | So-so       |
-| เสีย       | Lose/Cost   |
-| พยายาม    | Try/Strive  |
-| ดินสอ     | Pencil      |
+| **Thai** | **English Translation**           | **Explanation**                                           |
+|----------|-----------------------------------|-----------------------------------------------------------|
+| **ปู่**   | Paternal grandfather              | Father's father.                                          |
+| **ย่า**   | Paternal grandmother              | Father's mother.                                          |
+| **ตา**    | Maternal grandfather              | Mother's father.                                          |
+| **ยาย**   | Maternal grandmother              | Mother's mother.                                          |
+| **ลุง**   | Uncle (paternal)                  | Generally used for a father's brother (often the younger uncle).  |
+| **ป้า**   | Aunt (paternal)                   | Generally used for a father's sister.                     |
+| **น้า**   | Maternal uncle/aunt               | Refers to a mother's sibling (can be either gender).       |
+| **อา**    | Uncle (paternal)                  | Often used for a father's brother (sometimes the older uncle).  |
+| **พี่**   | Older sibling                     | Used for an older brother or sister.                      |
+| **น้อง**  | Younger sibling                   | Used for a younger brother or sister.                     |
